tests/sksl/errors/DuplicateInterfaceBlockName.glsl
### Compilation failed:

error: 6: unknown identifier 'Files'
    Files in errors/ must contain an error.
    ^^^^^
error: 6: expected ';', but found 'in'
    Files in errors/ must contain an error.
          ^^
2 errors
